# octo-hud

./: CMakeLists.txt  README.md
include/pico_hud/: Color.h  Font.h  HUDManager.h  IDisplay.h  ISensor.h  IWidget.h  Scheduler.h  Time.h
include/pico_hud/display/: VirtualDisplay.h
include/pico_hud/sensors/: MockSensor.h
include/pico_hud/widgets/: AltitudeTape.h  Crosshair.h  DataDisplay.h  HorizonLine.h  SpeedTape.h
src/: Font.cpp  HUDManager.cpp  IDisplay.cpp  IWidget.cpp  Time.cpp  main.cpp
src/display/: VirtualDisplay.cpp
src/sensors/: MockSensor.cpp
src/widgets/: AltitudeTape.cpp  Crosshair.cpp  DataDisplay.cpp  HorizonLine.cpp  SpeedTape.cpp
